# tauri-dev-mcp

./: .gitignore  README.md  jest.config.js  package-lock.json  package.json  test-client.js  test-mcp-direct.sh  test-mcp.sh  tsconfig.json
__tests__/: integration.test.ts
design/: css-selectors-guide.md  high-level-architecture.md  low-level-api-design.md  project-summary.md  tauri-plugin-api.md
docs/: getting-started.md  production-builds.md
example-app/: index.html  package-lock.json  package.json  vite.config.js
example-app/src-tauri/: Cargo.toml  tauri.conf.json
example-app/src-tauri/src/: main.rs
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
mcp-server/src/: index.ts
mcp-server/src/types/: index.ts
mcp-server/src/utils/: error-handler.ts  http-client.ts
tauri-plugin/: Cargo.toml
tauri-plugin/src/: lib.rs
tauri-plugin/src/bridge/: mod.rs
tauri-plugin/src/http/: mod.rs
tauri-plugin/src/js/: inspector.js
tauri-plugin/src/tools/: mod.rs
types/: test-types.ts
