[package]
name = "tauri-dev-mcp"
version = "0.1.0"
description = "A Tauri plugin that provides MCP development capabilities"
authors = ["Tauri Dev MCP"]
license = "MIT"
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

[lib]
name = "tauri_dev_mcp"
crate-type = ["cdylib", "rlib"]